[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/dpcomic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/MainScreen/MenuButton.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[node name="TextureButton" type="TextureButton"]
margin_right = 300.0
margin_bottom = 70.0
rect_min_size = Vector2( 300, 70 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Start"
valign = 1

[connection signal="button_up" from="." to="." method="_on_TextureButton_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TextureButton_mouse_exited"]
